--- a/product/superapp/pom.xml
+++ b/product/superapp/pom.xml
@@ -95,6 +95,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-browse</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-cassandraql</artifactId>
         </dependency>
         <dependency>
