Support camel-quarkus-dataformat

--- a/product/integration-tests-mixed-native/group-03/pom.xml
+++ b/product/integration-tests-mixed-native/group-03/pom.xml
@@ -33,7 +33,6 @@
     <name>Camel Quarkus :: Integration Tests :: Mixed Native :: Group 03</name>
 
     <modules>
-        <module>../../../integration-tests/json-validator</module>
         <module>../../../integration-tests/jsonata</module>
         <module>../../../integration-tests/kotlin</module>
         <module>../../../integration-tests/kudu</module>
@@ -63,5 +62,6 @@
         <module>../../../integration-tests/qute</module>
         <module>../../../integration-tests/rabbitmq</module>
         <module>../../../integration-tests/reactive-streams</module>
+        <module>../../../integration-tests/saga</module>
     </modules>
 </project>
