--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -83,7 +83,7 @@
         <!-- <module>csimple</module> disabled by cq-prod-maven-plugin:prod-excludes -->
         <!-- <module>csv</module> disabled by cq-prod-maven-plugin:prod-excludes -->
         <module>cxf-soap</module>
-        <!-- <module>dataformat</module> disabled by cq-prod-maven-plugin:prod-excludes -->
+        <module>dataformat</module>
         <module>dataset</module>
         <!-- <module>datasonnet</module> disabled by cq-prod-maven-plugin:prod-excludes -->
         <!-- <module>debezium-mongodb</module> disabled by cq-prod-maven-plugin:prod-excludes -->
