--- a/product/integration-tests-mixed-allowed/group-01/pom.xml
+++ b/product/integration-tests-mixed-allowed/group-01/pom.xml
@@ -35,6 +35,7 @@
     <modules>
         <module>../../../integration-test-groups/aws2-quarkus-client/aws2-s3</module>
         <module>../../../integration-test-groups/aws2/aws2-s3</module>
+        <module>../../../integration-tests/dataformat</module>
         <module>../../../integration-tests/dataformats-json</module>
         <module>../../../integration-tests/file</module>
         <module>../../../integration-tests/http</module>
