--- a/product/superapp/pom.xml
+++ b/product/superapp/pom.xml
@@ -115,6 +115,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-dataformat</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-dataset</artifactId>
         </dependency>
         <dependency>
