--- a/product/integration-tests-product/group-01/pom.xml
+++ b/product/integration-tests-product/group-01/pom.xml
@@ -44,6 +44,7 @@
         <module>../../../integration-test-groups/aws2/aws2-sqs-sns</module>
         <module>../../../integration-test-groups/azure/azure-storage-blob</module>
         <module>../../../integration-test-groups/azure/azure-storage-queue</module>
+        <module>../../../integration-test-groups/compression/zip-deflater</module>
         <module>../../../integration-test-groups/compression/zipfile</module>
         <module>../../../integration-test-groups/foundation/bean</module>
         <module>../../../integration-test-groups/foundation/browse</module>
