--- a/product/superapp/pom.xml
+++ b/product/superapp/pom.xml
@@ -355,6 +355,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-zip-deflater</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-zipfile</artifactId>
         </dependency>
     </dependencies>
