--- a/product/integration-tests-product/group-02/pom.xml
+++ b/product/integration-tests-product/group-02/pom.xml
@@ -33,6 +33,7 @@
     <name>Camel Quarkus :: Integration Tests :: Product :: Group 02</name>
 
     <modules>
+        <module>../../../integration-test-groups/foundation/timer</module>
         <module>../../../integration-test-groups/mongodb/mongodb</module>
         <module>../../../integration-tests-jvm/java-joor-dsl</module>
         <module>../../../integration-tests/avro</module>
