--- a/extensions/jslt/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/jslt/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -24,7 +24,7 @@
 name: "Camel JSLT"
 description: "Query or transform JSON payloads using an JSLT"
 metadata:
-  guide: "https://camel.apache.org/camel-quarkus/latest/user-guide/index.html"
+  guide: "https://access.redhat.com/documentation/en-us/red_hat_integration/2.latest/html/camel_extensions_for_quarkus_reference/extensions-jslt"
   categories:
   - "integration"
   status:
