add Red Hat support for master extension #CEQ-4390

--- a/extensions/master/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/master/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -24,7 +24,7 @@
 name: "Camel Master"
 description: "Have only a single consumer in a cluster consuming from a given endpoint; with automatic failover if the JVM dies"
 metadata:
-  guide: "https://camel.apache.org/camel-quarkus/latest/reference/extensions/master.html"
+  guide: "https://access.redhat.com/documentation/en-us/red_hat_integration/2.latest/html/camel_extensions_for_quarkus_reference/extensions-master"
   categories:
   - "integration"
   status:
