--- a/product/integration-tests-product/group-01/pom.xml
+++ b/product/integration-tests-product/group-01/pom.xml
@@ -49,6 +49,7 @@
         <module>../../../integration-test-groups/foundation/bean</module>
         <module>../../../integration-test-groups/foundation/browse</module>
         <module>../../../integration-test-groups/foundation/component-name-resolver</module>
+        <module>../../../integration-test-groups/foundation/controlbus</module>
         <module>../../../integration-test-groups/foundation/core</module>
         <module>../../../integration-test-groups/foundation/core-annotations</module>
         <module>../../../integration-test-groups/foundation/core-fault-tolerance</module>
