--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,7 @@
 
         <!-- Maven plugin versions (keep sorted alphabetically) -->
         <cq-plugin.version>3.2.6</cq-plugin.version>
+        <cyclonedx-maven-plugin-version>2.7.5</cyclonedx-maven-plugin-version>
         <build-helper-maven-plugin.version>3.1.0</build-helper-maven-plugin.version>
         <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
         <formatter-maven-plugin.version>2.17.1</formatter-maven-plugin.version>
@@ -1332,6 +1333,31 @@
                         </dependencies>
                     </plugin>
                 </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>sbom</id>
+            <build>
+            <plugins>
+                <plugin>
+                   <groupId>org.cyclonedx</groupId>
+                   <artifactId>cyclonedx-maven-plugin</artifactId>
+                   <version>${cyclonedx-maven-plugin-version}</version>
+                   <inherited>false</inherited>
+                   <configuration>
+                        <outputName>camel-quarkus-sbom</outputName>
+                        <outputDirectory>${project.basedir}/camel-quarkus-sbom/</outputDirectory>
+                   </configuration>
+                   <executions>
+                       <execution>
+                           <phase>package</phase>
+                           <goals>
+                               <goal>makeAggregateBom</goal>
+                           </goals>
+                      </execution>
+                   </executions>
+                </plugin>
+            </plugins>
             </build>
         </profile>
     </profiles>
