CEQ-6192: Productize gRPC extension

--- a/extensions/grpc/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/grpc/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -25,7 +25,7 @@ name: "Camel gRPC"
 description: "Expose gRPC endpoints and access external gRPC endpoints"
 icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
-  guide: "https://camel.apache.org/camel-quarkus/latest/reference/extensions/grpc.html"
+  guide: "https://access.redhat.com/documentation/en-us/red_hat_integration/3.latest/html/camel_extensions_for_quarkus_reference/extensions-grpc"
   categories:
   - "integration"
   status:
