--- a/product/integration-tests-product/group-02/pom.xml
+++ b/product/integration-tests-product/group-02/pom.xml
@@ -64,6 +64,6 @@
         <module>../../../integration-tests/ftp</module>
         <module>../../../integration-tests/google-bigquery</module>
         <module>../../../integration-tests/google-pubsub</module>
-        <module>../../../integration-tests/hl7</module>
+        <module>../../../integration-tests/grpc</module>
     </modules>
 </project>
