--- a/product/integration-tests-product/group-03/pom.xml
+++ b/product/integration-tests-product/group-03/pom.xml
@@ -33,6 +33,7 @@
     <name>Camel Quarkus :: Integration Tests :: Product :: Group 03</name>
 
     <modules>
+        <module>../../../integration-tests/hl7</module>
         <module>../../../integration-tests/infinispan</module>
         <module>../../../integration-tests/infinispan-common</module>
         <module>../../../integration-tests/infinispan-quarkus-client</module>
@@ -64,6 +65,5 @@
         <module>../../../integration-tests/main-xml-io</module>
         <module>../../../integration-tests/main-xml-io-with-beans</module>
         <module>../../../integration-tests/main-yaml</module>
-        <module>../../../integration-tests/management</module>
     </modules>
 </project>
