--- a/product/superapp/pom.xml
+++ b/product/superapp/pom.xml
@@ -163,6 +163,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-grpc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-gson</artifactId>
         </dependency>
         <dependency>
