--- a/integration-test-groups/cxf-soap/pom.xml
+++ b/integration-test-groups/cxf-soap/pom.xml
@@ -39,6 +39,7 @@
         <!-- extensions a..z; do not remove this comment, it is important when sorting via  mvn process-resources -Pformat -->
         <module>cxf-soap-client</module>
         <module>cxf-soap-converter</module>
+        <module>cxf-soap-metrics</module>
         <module>cxf-soap-mtom</module>
         <module>cxf-soap-mtom-awt</module>
         <module>cxf-soap-rest</module>
