--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -221,7 +221,7 @@
         <!-- <module>smallrye-reactive-messaging</module> disabled by cq-prod-maven-plugin:prod-excludes -->
         <!-- <module>snakeyaml</module> disabled by cq-prod-maven-plugin:prod-excludes -->
         <module>soap</module>
-        <!-- <module>splunk</module> disabled by cq-prod-maven-plugin:prod-excludes -->
+        <module>splunk</module>
         <!-- <module>spring-rabbitmq</module> disabled by cq-prod-maven-plugin:prod-excludes -->
         <module>sql</module>
         <!-- <module>ssh</module> disabled by cq-prod-maven-plugin:prod-excludes -->
