--- a/product/superapp/pom.xml
+++ b/product/superapp/pom.xml
@@ -387,6 +387,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-splunk</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-sql</artifactId>
         </dependency>
         <dependency>
